change pages to english

--- a/insurance/english/backpackers.html
+++ b/insurance/english/backpackers.html
@@ -8,116 +8,114 @@
 
 <body>
   <div class="aig-abroad">
-
-
     <div id="modal-body-id" class="modal-body container single-package-details-wrapper ng-scope">
       <table class="table table-bordered" valign="middle">
         <thead>
           <tr>
-            <th scope="col" class="ng-binding">כיסוי עבור חבילת Travel Guard- חבילה לבעלי מצב רפואי קודם</th>
-            <th scope="col" class="ng-binding">גבול אחריות מקסימלי</th>
+            <th scope="col" class="ng-binding">Coverage for Backpackers package</th>
+            <th scope="col" class="ng-binding">Maximum liability limit</th>
           </tr>
         </thead>
         <!-- ngRepeat: tableRow in tableRows track by $index -->
         <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
           <tr>
-            <td colspan="2" class="rows-title ng-binding">הוצאות רפואיות</td>
+            <td colspan="2" class="rows-title ng-binding">Medical Expenses</td>
           </tr>
           <!-- ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הוצאות רפואיות בחו"ל</td>
-            <td tabindex="0" class="ng-binding">500,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Medical expenses abroad</td>
+            <td tabindex="0" class="ng-binding">1,000,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">החמרת מצב רפואי קיים</td>
-            <td tabindex="0" class="ng-binding">200,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Hospitalization expenses and medical expenses for extreme sports + winter sports</td>
+            <td tabindex="0" class="ng-binding">800,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הוצאות רפואיות - הריון</td>
-            <td tabindex="0" class="ng-binding">50,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Overland, aerial and overseas evacuation</td>
+            <td tabindex="0" class="ng-binding">Full coverage included, no extra payment.</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">פינוי ימי ואווירי</td>
-            <td tabindex="0" class="ng-binding">7,500$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Medical flight</td>
+            <td tabindex="0" class="ng-binding">Full coverage included, no extra payment.</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הטסה רפואית</td>
-            <td tabindex="0" class="ng-binding">כיסוי מלא כלול. ללא תוספת תשלום</td>
+            <td tabindex="0" scope="row" class="ng-binding">Rescue expenses</td>
+            <td tabindex="0" class="ng-binding">1,500$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הטסת מלווה מישראל לחו"ל</td>
-            <td tabindex="0" class="ng-binding">אין כיסוי</td>
+            <td tabindex="0" scope="row" class="ng-binding">Air transport for an escort</td>
+            <td tabindex="0" class="ng-binding">100,000$/ 1 year</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הוצאות להחזרת ילדים לישראל (עד 4 ילדים)</td>
-            <td tabindex="0" class="ng-binding">אין כיסוי</td>
+            <td tabindex="0" scope="row" class="ng-binding">Body transfer</td>
+            <td tabindex="0" class="ng-binding">Full coverage included, no extra payment.</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">תרופות</td>
-            <td tabindex="0" class="ng-binding">200$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Medicine</td>
+            <td tabindex="0" class="ng-binding">Full coverage included, no extra payment.</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">טיפול חירום בשיניים ועזרה ראשונה בשיניים</td>
-            <td tabindex="0" class="ng-binding">300$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Emergency treatment</td>
+            <td tabindex="0" class="ng-binding">400$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">העברת גופה</td>
-            <td tabindex="0" class="ng-binding">כיסוי מלא כלול. ללא תוספת תשלום</td>
+            <td tabindex="0" scope="row" class="ng-binding">Burial expenses</td>
+            <td tabindex="0" class="ng-binding">2,500$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
         </tbody>
         <!-- end ngRepeat: tableRow in tableRows track by $index -->
         <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
           <tr>
-            <td colspan="2" class="rows-title ng-binding">הוצאות מיוחדות</td>
+            <td colspan="2" class="rows-title ng-binding">Special Expenses</td>
           </tr>
           <!-- ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">כרטיס נסיעה מבוטח</td>
-            <td tabindex="0" class="ng-binding">1,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Insured travel ticket</td>
+            <td tabindex="0" class="ng-binding">2,500$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">כרטיס נסיעה- מלווה אחד בלבד</td>
-            <td tabindex="0" class="ng-binding">500$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Travel ticker - single company</td>
+            <td tabindex="0" class="ng-binding">2,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הוצאות בחו"ל בגין מלון מבוטח</td>
-            <td tabindex="0" class="ng-binding">1,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Expenses abroad for insured hotel</td>
+            <td tabindex="0" class="ng-binding">3,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">הוצאות בחו"ל בגין מלון - מלווה אחד בלבד</td>
-            <td tabindex="0" class="ng-binding">1,000$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Expenses abroad for insured hotel - single company</td>
+            <td tabindex="0" class="ng-binding">3,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">ביטול נסיעה</td>
+            <td tabindex="0" scope="row" class="ng-binding">Trip cancellation</td>
             <td tabindex="0" class="ng-binding">5,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">ביטול נסיעה- מלווה אחד בלבד</td>
+            <td tabindex="0" scope="row" class="ng-binding">Trip cancellation - single company</td>
             <td tabindex="0" class="ng-binding">1,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">קיצור נסיעה</td>
+            <td tabindex="0" scope="row" class="ng-binding">Trip interruption</td>
             <td tabindex="0" class="ng-binding">7,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">קיצור נסיעה - מלווה אחד בלבד</td>
+            <td tabindex="0" scope="row" class="ng-binding">Trip interruption - single company</td>
             <td tabindex="0" class="ng-binding">1,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
@@ -125,28 +123,33 @@
         <!-- end ngRepeat: tableRow in tableRows track by $index -->
         <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
           <tr>
-            <td colspan="2" class="rows-title ng-binding">תאונות אישיות</td>
+            <td colspan="2" class="rows-title ng-binding">Personal accidents</td>
           </tr>
           <!-- ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">מוות עקב תאונה</td>
+            <td tabindex="0" scope="row" class="ng-binding">Death due to accident</td>
             <td tabindex="0" class="ng-binding">15,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">נכות צמיתה עקב תאונה</td>
+            <td tabindex="0" scope="row" class="ng-binding">Permanent disability due to accident</td>
             <td tabindex="0" class="ng-binding">15,000$</td>
+          </tr>
+          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
+          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
+            <td tabindex="0" scope="row" class="ng-binding">Psychological treatments</td>
+            <td tabindex="0" class="ng-binding">500$ (10*50$)</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
         </tbody>
         <!-- end ngRepeat: tableRow in tableRows track by $index -->
         <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
           <tr>
-            <td colspan="2" class="rows-title ng-binding">חבות כלפי צד ג'</td>
+            <td colspan="2" class="rows-title ng-binding">Third party liability</td>
           </tr>
           <!-- ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">צד ג'</td>
+            <td tabindex="0" scope="row" class="ng-binding">Third party</td>
             <td tabindex="0" class="ng-binding">100,000$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
@@ -154,64 +157,65 @@
         <!-- end ngRepeat: tableRow in tableRows track by $index -->
         <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
           <tr>
-            <td colspan="2" class="rows-title ng-binding">כיסויים נוספים</td>
+            <td colspan="2" class="rows-title ng-binding">Extra coverage</td>
           </tr>
           <!-- ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">כבודה</td>
+            <td tabindex="0" scope="row" class="ng-binding">baggage</td>
             <td tabindex="0" class="ng-binding">1,750$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">מתוכה דברי ערך</td>
-            <td tabindex="0" class="ng-binding">500$</td>
-          </tr>
-          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
-          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">מקסימום לפריט</td>
-            <td tabindex="0" class="ng-binding">300$</td>
-          </tr>
-          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
-          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">גניבת מטען מרכב או מתא לשמירת חפצים</td>
+            <td tabindex="0" scope="row" class="ng-binding">Valuables</td>
             <td tabindex="0" class="ng-binding">400$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">עיכוב בהגעת כבודה</td>
-            <td tabindex="0" class="ng-binding">100$(מעל 24 שעות)</td>
+            <td tabindex="0" scope="row" class="ng-binding">Maximum per item</td>
+            <td tabindex="0" class="ng-binding">200$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">אובדן דרכון</td>
-            <td tabindex="0" class="ng-binding">100$</td>
+            <td tabindex="0" scope="row" class="ng-binding">Backpack</td>
+            <td tabindex="0" class="ng-binding">300$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">שחזור מסמכים</td>
-            <td tabindex="0" class="ng-binding">150$</td>
-          </tr>
-          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
-          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">עיכוב טיסה</td>
-            <td tabindex="0" class="ng-binding">אין כיסוי</td>
-          </tr>
-          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
-          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">השתתפות עצמית</td>
+            <td tabindex="0" scope="row" class="ng-binding">Suitcase/Bag/Wallet</td>
             <td tabindex="0" class="ng-binding">50$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
           <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
-            <td tabindex="0" scope="row" class="ng-binding">גיל כניסה מקסימלי</td>
-            <td tabindex="0" class="ng-binding">75</td>
+            <td tabindex="0" scope="row" class="ng-binding">Document recovery</td>
+            <td tabindex="0" class="ng-binding">150$</td>
+          </tr>
+          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
+        </tbody>
+        <!-- end ngRepeat: tableRow in tableRows track by $index -->
+        <tbody ng-repeat="tableRow in tableRows track by $index" class="ng-scope">
+          <tr>
+            <td colspan="2" class="rows-title ng-binding">Locate search and rescue</td>
+          </tr>
+          <!-- ngRepeat: cover in tableRow.covers track by $index -->
+          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
+            <td tabindex="0" scope="row" class="ng-binding">Locate search and rescue</td>
+            <td tabindex="0" class="ng-binding">100,000$</td>
+          </tr>
+          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
+          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
+            <td tabindex="0" scope="row" class="ng-binding">Earthquake</td>
+            <td tabindex="0" class="ng-binding">75,000$</td>
+          </tr>
+          <!-- end ngRepeat: cover in tableRow.covers track by $index -->
+          <tr ng-repeat="cover in tableRow.covers track by $index" class="ng-scope">
+            <td tabindex="0" scope="row" class="ng-binding">Policyholder's participation</td>
+            <td tabindex="0" class="ng-binding">50$</td>
           </tr>
           <!-- end ngRepeat: cover in tableRow.covers track by $index -->
         </tbody>
         <!-- end ngRepeat: tableRow in tableRows track by $index -->
       </table>
     </div>
-
   </div>
 </body>
 
